{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 27,
  "lineage": "144f84d2-7254-ece2-f32b-297c7756e687",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035b3c7efe6d061d5",
            "arn": "arn:aws:ec2:us-east-1:318812774471:instance/i-03319ae9fa44f6216",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03319ae9fa44f6216",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "farhad",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f2ae75830289cb0",
            "private_dns": "ip-10-0-1-175.ec2.internal",
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-100-27-44-198.compute-1.amazonaws.com",
            "public_ip": "100.27.44.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b9f997b48cf5a94",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0445ed17aa0896696",
            "tags": {
              "Name": "Ec2-with-VPC"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09665f9f1130334c0"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_1",
            "aws_vpc.farhad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318812774471:internet-gateway/igw-07bea570b22d89b72",
            "id": "igw-07bea570b22d89b72",
            "owner_id": "318812774471",
            "tags": {
              "Name": "internet-gateway-demo"
            },
            "vpc_id": "vpc-08cae553d157d3097"
          },
          "dependencies": [
            "aws_vpc.farhad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03f5c12568276b07e",
            "owner_id": "318812774471",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bea570b22d89b72",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-demo"
            },
            "vpc_id": "vpc-08cae553d157d3097"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.farhad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e48e6d79e0c89ff",
            "route_table_id": "rtb-03f5c12568276b07e",
            "subnet_id": "subnet-0445ed17aa0896696"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route-public",
            "aws_subnet.public_1",
            "aws_vpc.farhad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318812774471:security-group/sg-09665f9f1130334c0",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09665f9f1130334c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "318812774471",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08cae553d157d3097"
          },
          "dependencies": [
            "aws_vpc.farhad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318812774471:subnet/subnet-0445ed17aa0896696",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0445ed17aa0896696",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "318812774471",
            "tags": {
              "Name": "public_1-demo"
            },
            "vpc_id": "vpc-08cae553d157d3097"
          },
          "dependencies": [
            "aws_vpc.farhad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "farhad",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:318812774471:vpc/vpc-08cae553d157d3097",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb0ddb75e6883b99",
            "default_route_table_id": "rtb-00c877fa300e5aadc",
            "default_security_group_id": "sg-0c07b2714d28934d8",
            "dhcp_options_id": "dopt-243d775e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08cae553d157d3097",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00c877fa300e5aadc",
            "owner_id": "318812774471",
            "tags": {
              "Name": "Vpc-custom-demo"
            }
          }
        }
      ]
    }
  ]
}